--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 
+REACT_APP_BASE_URL = https://deployhousybe-production.up.railway.app/api/v1
+REACT_APP_MIDTRANS_CLIENT_KEY = SB-Mid-client-b8WeIEvd5FvVR65y
